--- a/CWEditor.html
+++ b/CWEditor.html
@@ -20,9 +20,9 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
 <div class="w3-top">
   <div class="w3-bar w3-red w3-card w3-left-align w3-large">
     <a class="w3-bar-item w3-button w3-hide-medium w3-hide-large w3-right w3-padding-large w3-hover-white w3-large w3-red" href="javascript:void(0);" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
-    <a href="index.html" class="w3-bar-item w3-button w3-padding-large w3-hover-white">Home</a>
-    <a href="BlankEditor.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-white">Code Editor</a>
-    <a href="CWEditor.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">CW Project</a>
+    <a href="index.html" class="w3-bar-item w3-button w3-padding-large w3-hover-hover-white">Home</a>
+    <a href="BlankEditor.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Code Editor</a>
+    <a href="CWEditor.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-white">CW Project</a>
   </div>
 
   <!-- Navbar on small screens -->
@@ -42,7 +42,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
     width: 100%;
     border: 1px solid rgb(0, 0, 0);
     padding: 10px;">
-    <iframe src="https://trinket.io/embed/python/969fd379fb" width="100%" height="600" frameborder="0" marginwidth="0" marginheight="0" allowfullscreen></iframe>
+    <iframe src="https://trinket.io/embed/python/d07937494f" width="100%" height="600" frameborder="0" marginwidth="0" marginheight="0" allowfullscreen></iframe>
     </div>
 </header>
 
