--- a/index.html
+++ b/index.html
@@ -34,8 +34,9 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
 </div>
 
 <!-- Header -->
-<header class="w3-container w3-red w3-center" style="padding:25vh;height:100vh;">
-  <h1 class="w3-margin w3-jumbo" style="top: 50vh;"><strong>Programming with Python</strong></h1>
+<header class="w3-container w3-red w3-center" style="padding: 40px 2px;">
+  <h1 class="w3-margin w3-jumbo"><strong>Rail Eng</strong></h1>
+  <p class="w3-xlarge"><strong>Programming with Python</strong></p>
   <p class="w3-xlarge">Module leader: Jerome Graves</p>
   <p class="w3-large"><a  href ="mailto:jerome.graves@lsbu.ac.uk">jerome.graves@lsbu.ac.uk</a></p>
   <a href="BlankEditor.html"><button class="w3-button w3-black w3-padding-large w3-large w3-margin-top">Code editor</button></a>
