--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
   <div class="w3-bar w3-red w3-card w3-left-align w3-large">
     <a class="w3-bar-item w3-button w3-hide-medium w3-hide-large w3-right w3-padding-large w3-hover-white w3-large w3-red" href="javascript:void(0);" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
     <a href="index.html" class="w3-bar-item w3-button w3-padding-large w3-white">Home</a>
-    <a href="BlankEditor.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Code editor</a>
+    <a href="BlankEditor.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Code Editor</a>
     <a href="CWEditor.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">CW Project</a>
   </div>
 
@@ -39,7 +39,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
   <p class="w3-xlarge"><strong>Programming with Python</strong></p>
   <p class="w3-xlarge">Module leader: Jerome Graves</p>
   <p class="w3-large"><a  href ="mailto:jerome.graves@lsbu.ac.uk">jerome.graves@lsbu.ac.uk</a></p>
-  <a href="BlankEditor.html"><button class="w3-button w3-black w3-padding-large w3-large w3-margin-top">Code editor</button></a>
+  <a href="BlankEditor.html"><button class="w3-button w3-black w3-padding-large w3-large w3-margin-top">Code Editor</button></a>
 </header>
 
 <!-- First Grid 
